[gd_scene load_steps=8 format=2]

[ext_resource path="res://Projectile/cannon-ball.png" type="Texture" id=1]
[ext_resource path="res://Projectile/Projectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Projectile/CannonBall.gd" type="Script" id=3]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0333

[sub_resource type="CircleShape2D" id=2]
radius = 93.0054

[sub_resource type="CircleShape2D" id=3]
radius = 18.0278

[node name="CannonBall" instance=ExtResource( 2 )]
script = ExtResource( 3 )
SPEED = 250
TRAVEL_TIME = 0.8

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="Collider" parent="." index="1"]
shape = SubResource( 1 )

[node name="ExplosionHitbox" parent="." index="2" instance=ExtResource( 4 )]
collision_mask = 4
DAMAGE = 100

[node name="Collider" parent="ExplosionHitbox" index="0"]
shape = SubResource( 2 )
disabled = true

[node name="Hitbox" parent="." index="3"]
collision_mask = 4
DAMAGE = 50

[node name="Collider" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="TravelTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="LingerTimer" type="Timer" parent="." index="6"]
wait_time = 0.45
one_shot = true
[connection signal="timeout" from="TravelTimer" to="." method="_on_TravelTimer_timeout"]
[connection signal="timeout" from="LingerTimer" to="." method="_on_LingerTimer_timeout"]

[editable path="ExplosionHitbox"]

[editable path="Hitbox"]
